--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-auth": "^4.24.11",
     "nodemon": "^3.1.10",
